--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,16 +6,12 @@
     <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
-
-<section class="container mt-5">
-    <h1 class="text-success text-center">This is the Home Page</h1>
-
-    <p class="lead text-muted text-center">Welcome to our website using Bootstrap 5!</p>
-
-    <div class="text-center">
-        <button class="btn btn-primary">Bootstrap Button</button>
+<section class="banner">
+    <div>
+        <h1 class="text-white">This is the Home Page</h1>
+        <p class="lead">Welcome to Smart Contact Manager!</p>
+        <button class="btn btn-primary btn-large">Sign Up</button>
     </div>
 </section>
-
 </body>
 </html>
