--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -27,7 +27,7 @@
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Login</a></li>
+        <li class="nav-item"><a class="nav-link" href="/user/index">Login</a></li>
         <li class="nav-item"><a class="nav-link" href="#">SignUP</a></li>
       </ul>
     </div>
