--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -24,7 +24,7 @@
         <h3 class="text-center mb-4 text-warning">Login</h3>
 
         <!-- Login form -->
-        <form th:action="@{/signin}" method="post" class="text-white">
+        <form th:action="@{/dologin}" method="post" class="text-white">
           
           <!-- Username / Email -->
           <div class="mb-4">
