--- a/src/main/resources/templates/normal/user_dashboard.html
+++ b/src/main/resources/templates/normal/user_dashboard.html
@@ -1,10 +1,16 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{normal/base::layout(~{::section})}">
 <head>
 	<meta charset="UTF-8" />
 	<title>user_dashboard</title>
 </head>
 <body>
-	<h1>welcome to user_dashboard</h1>
+	<section style="color:white;">
+		<h1 style="text:white">welcome to user_dashboard</h1>
+		<h2>Hii,<span th:text="${user.name}"></span></h2>
+		
+		
+		<a href="/logout">Logout</a>
+	</section>
 </body>
 </html>
