--- a/src/main/resources/templates/normal/base.html
+++ b/src/main/resources/templates/normal/base.html
@@ -10,6 +10,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
           rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 
@@ -33,17 +34,41 @@
   </div>
 </nav>
 
-<!-- Content Section -->
-<div class="container mt-5" th:replace="${content}">
-</div>
+<!-- side bar-->
+<div class="sidebar">
+	<!--  <span class="crossBtn" onclick="togglesidebar()">&times;</span>-->
+	
+	
+	<a href="#" class="item"><i class="fa-solid fa-house"></i> Home</a><div class="divider"></div>
+	<a href="#" class="item"><i class="fa-solid fa-phone"></i> View contacts</a><div class="divider"></div>
+	<a href="#" class="item"><i class="fa-solid fa-plus"></i> Add contacts</a><div class="divider"></div>
+	<a href="#" class="item"><i class="fa-solid fa-user"></i> Your Profile</a><div class="divider"></div>
+	<a href="#" class="item"><i class="fa-solid fa-gear"></i> setting</a><div class="divider"></div>
+	<a href="#" class="item"><i class="fa-solid fa-right-from-bracket"></i> logout</a>
+	<div class="divider"></div>
+</div>	
+	
 
+
+
+
+
+<!-- Content Section -->
+<div class="content" style="cursor: pointer;">
+<i class="fa-solid fa-solid fa-bars m-3" onclick="togglesidebar()"></i>
+<div th:replace="${content}">
+</div>
+</div>
 <!-- Footer -->
-<footer class="bg-dark text-light text-center py-3 mt-auto" style="position: sticky; bottom: 0; left: 0; width: 100%; padding: 1rem 0; z-index: 1030;">
+<footer class="bg-dark text-light text-center py-3 mt-auto" style="position: fixed; bottom: 0; left: 0; width: 100%; padding: 1rem 0; z-index: 1030;">
     <p class="mb-0">© 2025 MySite. All rights reserved.</p>
 </footer>
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- jQuery (must come before your script.js) -->
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script type="text/javascript" th:src="@{/js/script.js}"></script>
 
 </body>
 </html>
