--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -335,3 +335,17 @@ body {
       background: #000;
       color: #fff;
     }
+    
+
+    
+ <!--alert trasition-->
+ 
+ /* Slide-up effect for alert */
+#alertMessage {
+  transition: opacity 2s ease, transform 2s ease;
+}
+
+#alertMessage.hide {
+  opacity: 0;
+  transform: translateY(-50px);
+}
