--- a/src/main/resources/templates/normal/base.html
+++ b/src/main/resources/templates/normal/base.html
@@ -41,7 +41,7 @@
 	
 	
 	<a href="#" th:href="@{/user/index}" class="item"><i class="fa-solid fa-house"></i> Home</a><div class="divider"></div>
-	<a href="#" class="item"><i class="fa-solid fa-phone"></i> View contacts</a><div class="divider"></div>
+	<a href="#" th:href="@{/user/show_contacts}" class="item"><i class="fa-solid fa-phone"></i> View contacts</a><div class="divider"></div>
 	<a href="#" th:href="@{/user/add_contacts}" class="item"><i class="fa-solid fa-plus"></i> Add contacts</a><div class="divider"></div>
 	<a href="#" class="item"><i class="fa-solid fa-user"></i> Your Profile</a><div class="divider"></div>
 	<a href="#" class="item"><i class="fa-solid fa-gear"></i> setting</a><div class="divider"></div>
