--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -362,3 +362,27 @@ body {
   font-size: larger;
   font-family: monospace;
 }
+
+/*for pagination*/
+.pagination-nav {
+  text-align: center;
+  margin-top: 30px;
+}
+
+.pagination-nav .page-link {
+  color: #fff;
+  transition: background-color 0.3s ease;
+  background-color: #1a1d23;
+}
+
+.pagination-nav .page-link:hover {
+  background-color: #ffc105;
+  color: #000;
+  font-size: large;
+}
+
+.pagination-nav .active .page-link {
+  background-color: #ffc105;
+  color: black;
+  border-color: #0d6efd;
+}
